--- a/readme
+++ b/readme
@@ -1,4 +1,4 @@
 Currently app processes only TCP binary data
 
-packet:
-    all validation goes in packet.models
+data_models:
+    all Packet validation goes inside constructor
