--- a/readme
+++ b/readme
@@ -3,5 +3,5 @@ Currently app processes only TCP binary data
 data_models:
     all Packet validation goes inside constructor
 
-docker-compose.dev.yml:
-    you will need to create database and init it from dump manually by
+docker-compose.*.yml:
+    you will need to create database and init it from dump manually
